@@ -4,6 +4,7 @@ Jython 2.5.2a1
   Bugs Fixed
     - [ 1478 ] defaultdict & weakref.WeakKeyDictionary [TypeError: first argument must be callable]
     - [ 1487 ] Import of module with latin-1 chars fails on utf-8 file encoding
+    - [ 1449 ] Ellipsis comparison different from Python 2.5 to Jython 2.5
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
 
